@@ -8,7 +8,7 @@
 Copyright Notice and License Agreement for ViTables Application Software
 <p>
 Copyright 2005-2007 by Carabos Coop. V.</br>
-Copyright 2008-2011 by Vicent Mas
+Copyright 2008-2013 by Vicent Mas
 <p>
 <h3 style="text-align: center;">GNU GENERAL PUBLIC LICENSE</h3>
 <p style="text-align: center;">Version 3, 29 June 2007</p>
